# libsystemd-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: echo.rs  foo.rs.dontbuild  repeating_timer.rs  simple.rs
libsystemd-sys/: Cargo.toml  build.rs  lib.rs
libsystemd-sys/src/: libsystemd_sys_helpers.c
src/: clock.rs  daemon.rs  error.rs  event.rs  lib.rs
